--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Themightymo.GitHub.io by themightymo</title>
+    <title>Themightymo.GitHub.io</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>Themightymo.GitHub.io</h1>
-        <h2>my github website</h2>
+        <h2>This is a "hello world" site using Github pages.  Awesome.</h2>
         <a href="https://github.com/themightymo" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
